# wasteland2-accessibility-mod

./: .gitignore  AudioAwareAnnouncementManager.cs  CHANGELOG.md  CLAUDE.md  DirectionHelper.cs  FOWHelper.cs  IMPLEMENTATION_PLAN.txt  LocationLabels.cs  MenuCue.cs  ModConfig.cs  ModLog.cs  NavigationManager.cs  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  ScreenReaderManager.cs  SnakeSonifier.cs  TECHNICAL_DETAILS.md  Tolk.cs  UITextExtractor.CleanText.cs  UITextExtractor.cs  VoiceoverHelper.cs  WallSonification.cs  Wasteland2AccessibilityMod.cs  Wasteland2AccessibilityMod.csproj  WorldMapNavigationManager.cs  WorldMapProximityAlert.cs  build.bat  create-release.ps1  package.ps1
Core/: AccessibilityStateBase.cs  CameraLock.cs  CutsceneDetector.cs  ExplorationState.cs  GameLoadState.cs  IAccessibilityState.cs  InputRouter.cs  InputSuppressor.cs  PartyStopMonitor.cs  ScannerCueMonitor.cs  ScannerCueSounds.cs  TacticalPauseManager.cs
Helpers/: BubbleTextReflection.cs  CardinalDirections.cs  CharacterAnnouncementHelper.Snapshots.cs  CharacterAnnouncementHelper.StatDescriptions.cs  CharacterAnnouncementHelper.ValueAdjustment.cs  CharacterAnnouncementHelper.cs  ElevationHelper.cs  GridCursorStepper.cs  SceneQueryCache.cs  StatusEffectHelper.cs  TileCoordinateSystem.cs  WorldMapMath.cs
Patches/: CameraModePatches.cs  (+28 more)
installer/: Cargo.toml  build-installer.ps1  build.rs
installer/src/: cli.rs  gui.rs  main.rs  speech.rs
installer/src/core/: detect.rs  flow.rs  github.rs  install.rs  manifest.rs  melonloader.rs  mod.rs  paths.rs  process.rs  uninstall.rs
(+100 files in other folders)
